# streamlit

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  NOTICES  mypy.ini  pyproject.toml
.claude/: .gitignore  settings.json
.claude/agents/: fixing-pr.md  reviewing-local-changes.md  simplifying-local-changes.md
.claude/hooks/: post_edit_autofix.sh  pre_bash_redirect.py  stop_check.sh
.claude/skills/: AGENTS.md
.codex/: .gitignore
.cursor/: .gitignore  hooks.json  worktrees.json
.cursor/rules/: e2e_playwright.mdc  overview.mdc  python.mdc  python_lib.mdc  python_tests.mdc  skills.mdc  specs.mdc  typescript.mdc  workflows.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: .gitignore  CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/instructions/: e2e_playwright.instructions.md  python.instructions.md  python_lib.instructions.md  python_tests.instructions.md  skills.instructions.md  specs.instructions.md  typescript.instructions.md  workflows.instructions.md
.github/workflows/: AGENTS.md  ai-fix-flaky-e2e-tests.yml  ai-issue-triage.yml  ai-pr-review.yml  ai-update-docs.yml  cherry-pick-to-release-branch.yml  cli-regression.yml  codeql-analysis.yml  component-template-e2e-tests.yml  conda-build.yml  enforce-pre-commit.yml  ensure-relative-imports.yml  js-tests.yml  load-testing.yml  nightly.yml  patch-release-branch-creation.yml  performance.yml  playwright-changed-files.yml  playwright-custom-components.yml  playwright-starlette.yml  playwright.yml  pr-preview.yml  python-bare-executions.yml  python-tests.yml  release-branch-creation.yml  release-tag-and-pr-creation.yml  release.yml  require-labels.yml  semgrep.yml  snapshot-hygiene.yml  spec-validation.yml  stale-prs.yml  update-emojis-material-icons.yml
component-lib/: package.json
component-lib/src/: StreamlitReact.test.tsx
e2e_playwright/: AGENTS.md  auth.py  auth_test.py  conftest.py  deploy_dialog_test.py  hello_app_test.py  hostframe_app_test.py  iframe_resizer_test.py  lazy_loaded_modules.py  lazy_loaded_modules_test.py  main_menu_test.py  markdown_features.py  markdown_features_test.py  mega_tester_app.py  mega_tester_app_test.py  st_add_rows.py  st_alert.py  st_alert_test.py  st_altair_chart.py  st_altair_chart_basic_select.py  st_altair_chart_basic_select_test.py  st_altair_chart_multiview_select.py  st_altair_chart_multiview_select_test.py  st_altair_chart_test.py  st_app_advanced.py  st_app_advanced_script.py  st_app_advanced_test.py  st_audio_input.py  st_audio_input_test.py  st_balloons.py  st_balloons_test.py  st_bar_chart.py  st_bar_chart_test.py  st_bottom.py  st_bottom_no_chat_input.py  st_bottom_no_chat_input_test.py  st_bottom_test.py  st_button.py  st_button_test.py  st_camera_input_test.py  (+108 more)
e2e_playwright/bidi_components/: basics.py  basics_test.py
e2e_playwright/custom_components/: pdf_component.py  popular_components.py  popular_components_test.py
e2e_playwright/load_testing/: .gitignore  README.md  __init__.py  conftest.py  generate_report.py  metrics_collector.py  test_load.py  worker.py
e2e_playwright/multipage_apps/: mpa_basics.py  mpa_basics_test.py
e2e_playwright/multipage_apps_v2/: mpa_v2_basics.py  mpa_v2_basics_test.py  mpa_v2_page_visibility.py  mpa_v2_page_visibility_test.py  mpa_v2_top_nav_test.py
e2e_playwright/shared/: app_target.py  app_utils.py  dataframe_utils.py  oidc_mock_server.py  pydeck_utils.py
e2e_playwright/test_assets/: hostframe.html
e2e_playwright/theming/: custom_dark_sidebar_theme_test.py  custom_dark_theme_test.py  custom_light_sidebar_theme_test.py  custom_light_theme_test.py  custom_theme_fonts_test.py  size_and_weight_test_app.py  snowflake_dark_theme_test.py  snowflake_light_theme_test.py  theme_chart_colors_app.py  theme_from_window_test.py  theme_metric_value_style.py  theme_metric_value_style_test.py  theme_tester_app.py
frontend/: .oxfmtrc.json  .prettierignore  .yarnrc.yml  AGENTS.md  README.md  eslint.config.mjs  knip.json  package.json  test-globals.d.ts  vitest.setup.ts
frontend/app/: package.json  tsconfig.json  vite.config.ts
frontend/component-lib/: package.json  vite.config.ts
frontend/component-v2-lib/: package.json  vite.config.ts
frontend/connection/: package.json  vite.config.ts
frontend/eslint-plugin-streamlit-custom/: package.json
frontend/lib/: package.json  tsconfig.json  vite.config.ts
frontend/protobuf/: package.json
frontend/typescript-config/: base.tsconfig.json  package.json
frontend/utils/: package.json  vite.config.ts
lib/: AGENTS.md  MANIFEST.in  dev-requirements.txt  pyproject.toml  setup.py
lib/streamlit/: AGENTS.md  __init__.py  config.py  cursor.py  dataframe_util.py  delta_generator.py  errors.py  logger.py  material_icon_names.py  type_util.py  user_info.py
lib/tests/: AGENTS.md  conftest.py  exception_capturing_thread.py  testutil.py
proto/: buf.yaml
scripts/: audit_frontend_licenses.py  check_license_headers.py  fetch_flaky_tests.py  generate_agent_rules.py  run_in_subdirectory.py  slack_notifications.py  snapshot_cleanup.py  sync_vscode_devcontainer.py  update_emojis.py  update_name.py
scripts/assets/: code-review-instructions.md  min-constraints-gen.txt
specs/: AGENTS.md  README.md
specs/0000-template/: product-spec.md
specs/0001-session-scoped-connections-and-rcr/: product-spec.md
specs/0003-query-param-binding-state-persistence/: product-spec.md
specs/0004-sprintf-thousand-separator/: follow-up-python-format-spec.md  product-spec.md
specs/0006-menu-button/: product-spec.md
specs/0008-table-hide-index-header/: product-spec.md
specs/2025-11-18-session-scoped-connections-and-rcr/: product-spec.md
specs/2025-11-19-auth-oidc-tokens/: product-spec.md
specs/2025-12-01-link-button-on-click/: product-spec.md
specs/2025-12-02-table-hide-index-header/: product-spec.md
specs/2025-12-03-container-autoscroll/: product-spec.md
specs/2025-12-03-text-input-validation/: product-spec.md
wiki/: code-style-guide.md  pull-requests.md  running-e2e-tests.md
(+909 files in other folders)
